--- a/src/Components/Dashboard/Sidebar/Sidebar.css
+++ b/src/Components/Dashboard/Sidebar/Sidebar.css
@@ -1,5 +1,5 @@
 .sidebar{
-background-image: linear-gradient(40deg, #6d8fcf,#cbcdce);
+background-image: linear-gradient(40deg, #6d8fcf,#4c7997);
 position: fixed;
 left: 0;
 }
