--- a/src/Components/HomePage/Footer/Footer.css
+++ b/src/Components/HomePage/Footer/Footer.css
@@ -1,5 +1,5 @@
 .footer-design{
-   background-color: rgb(55, 131, 105); 
+   background-color: #378369; 
     height: 250px;
     color:rgb(195, 202, 207);
 }
