--- a/src/Components/ReviewCard/ReviewCard.css
+++ b/src/Components/ReviewCard/ReviewCard.css
@@ -1,13 +1,17 @@
 .card-design{
-    width: 10rem;
-    height: 6rem;
+    width: 30rem;
+    height: 10rem;
     box-shadow: 10px 5px 5px #e4e6e7;
     text-align: center;
-    margin:15px;
-    background-color: blanchedalmond;
+    background-color: #c2ddd4;
+    margin: auto;
 }
 
 .stars{
     align-items: center;
-    margin-top:10px;
+    margin-top:50px;
+}
+
+.text-des{
+font-size: 35px;
 }
