--- a/src/Components/HomePage/Services/Services.css
+++ b/src/Components/HomePage/Services/Services.css
@@ -1,5 +1,5 @@
 .div-wrapper{
-background: blueviolet;
+/* background: blueviolet; */
 width: 100vw;
 border-top-left-radius: 20% 10%;
 border-top-right-radius: 50% 40%;
